WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219119
REGRESSION (
r269895
): Google Maps expanded route options are missing background color
https://bugs.webkit.org/show_bug.cgi?id=219119
Summary
REGRESSION (r269895): Google Maps expanded route options are missing backgrou...
Tim Horton
Reported
2020-11-18 15:09:52 PST
REGRESSION (
r269895
): Google Maps expanded route options are missing background color
Attachments
Patch
(2.68 KB, patch)
2020-11-18 15:10 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-11-18 15:10:51 PST
Created
attachment 414492
[details]
Patch
Tim Horton
Comment 2
2020-11-18 15:11:11 PST
I'm writing a test, but would like to land this to resolve the regression in the meantime.
EWS
Comment 3
2020-11-18 16:28:15 PST
Committed
r270000
: <
https://trac.webkit.org/changeset/270000
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414492
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-11-18 16:29:24 PST
<
rdar://problem/71561605
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug