Cherry-pick r270000. rdar://problem/71588990

REGRESSION (r269895): Google Maps expanded route options are missing background color
    https://bugs.webkit.org/show_bug.cgi?id=219119
    <rdar://problem/71510412>

    Reviewed by Said Abou-Hallawa.

    No new tests, yet. Test is pending.

    * platform/graphics/cg/GraphicsContextCG.cpp:
    (WebCore::GraphicsContext::drawPlatformImage):
    r199071 removed the state save/restore around the CG implementation of
    drawNativeImage, explicitly saving and restoring the few things it knew
    that the implementation would change. However, it failed to save/restore
    the composite operator.

    This was mostly not a problem, because e.g. canvas always hands down the
    global op. However, in r269895, I added code that passes in a /different/
    compositing operator, and it gets stuck on the context.

    Save and restore the composite operator and blend mode like we do for other properties.

    Canonical link: https://commits.webkit.org/231743@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270000 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/231616.6@safari-611.1.6-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611.1.6-branch@270034 268f45cc-cd09-0410-ab3c-d52691b4dbfc